# c_ocs2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cereal/test/exp2_test/MATLAB XML_Parser/: PlotResult.m
cereal/test/exp4_test/MATLAB XML_Parser/: PlotResult.m  parseXML.m
cereal/test/integration_test/MATLAB XML_Parser/: PlotResult.m  plotNDoF.m
include/: Dimensions.h  Dimensions.hpp  GSLQ.h  GSLQ.hpp
include/GSLQ/: BVPEquations.h  FullRiccatiEquations.h  FullSequentialErrorEquation.h  FullSequentialRiccatiEquations.h  GLQP.h  GSLQ.h  GSLQP.h  GSLQPSolver.h  LQP.h  PartialRiccatiEquations.h  RiccatiEquations.h  RolloutSensitivityEquations.h  SLQP.h  SLQP_BASE.h  SLQP_MP.h  SensitivitySequentialRiccatiEquations.h  SequentialErrorEquation.h  SequentialRiccatiEquations.h  SolveBVP.h
include/GSLQ/implementation/: GLQP.h  GSLQ.h  GSLQP.h  GSLQPSolver.h  LQP.h  SLQP.h  SLQP_BASE.h  SLQP_MP.h
include/costs/: CostFunctionBase.h  CostFunctionBase.hpp  CostFunctionBaseOCS2.h  QuadraticCostFunction.h  QuadraticCostFunction.hpp
include/dynamics/: ControlledSystemBase.h  DerivativesBase.h  DerivativesBase.hpp  SystemBase.h  SystemDynamicsLinearizer.h
include/integration/: EventHandler.h  Integrator.h  IntegratorBase.h  KillIntegrationEventHandler.h  Observer.h  eigenIntegration.h
include/misc/: LinearInterpolation.h
include/ocs2/: IpopotCostFunntion.h  IpoptCostFunction.h  IpoptCostFunntion.h  LeastSquareCost.h  OCS2.h  OCS2DerivativesCheck.h  OCS2Ipopt.h  OCS2Projected.h
include/ocs2/implementation/: IpopotCostFunntion.h  IpoptCostFunntion.h  OCS2Ipopt.h  OCS2Projected.h
include/test/: EXP1.h  EXP2.h  EXP3.h  EXP4.h  EXP5.h  SecondOrderSystem.h
src/: RolloutTest.cpp
src/EXP2/: EXP2_Sys.cpp
src/test/: CeresTest.cpp  EXP1DerivativesCheck.cpp  EXP1GSLQPTest.cpp  EXP1Test.cpp  EXP1_SLQP_MP_Test.cpp  EXP2GSLQPTest.cpp  EXP2Test.cpp  EXP3GSLQPTest.cpp  EXP3SystemDynamicsDerivativeTest.cpp  EXP3_SLQP_MP_Test.cpp  EXP4GSLQPTest.cpp  EXP5GSLQPTest.cpp  EXP5SLQPTest.cpp  IntegrationTest.cpp  InterpolationTest.cpp  SystemDynamicsDerivativeTest.cpp
src/test/result_reference/: exp1_gslpq_test.txt  exp1_test.txt  exp2_gslqp_test.txt  exp2_test.txt  exp3_gslqp_test.txt  exp4_gslqp_test.txt
test/: CeresTest.cpp  IntegrationTest.cpp  InterpolationTest.cpp  SystemDynamicsDerivativeTest.cpp  VectorMatrixConversionTest.cpp  exp1_gslqp_test.cpp  exp1_slqp_test.cpp  exp2_test.cpp  exp5_gslqp_test.cpp  exp5_slqp_test.cpp
util/: PathTweaker.h  loadTask.h
